...
		static let openSystemSettings = "AppStrings.NotificationSettings.openSystemSettings"
		static let close = "AppStrings.NotificationSettings.DeltaOnboarding.primaryButtonTitle"
	}
	
	enum Home {
		static let leftBarButtonDescription = "AppStrings.Home.leftBarButtonDescription"
		static let rightBarButtonDescription = "AppStrings.Home.rightBarButtonDescription"
		static let activateCardOnTitle = "AppStrings.Home.activateCardOnTitle"
		static let activateCardOffTitle = "AppStrings.Home.activateCardOffTitle"
		static let activateCardBluetoothOffTitle = "AppStrings.Home.activateCardBluetoothOffTitle"
		static let riskCardIntervalUpdateTitle = "AppStrings.Home.riskCardIntervalUpdateTitle"
		static let tableView = "AppStrings.Home.tableView"

...
			}

			static let loadingRiskTitle = "AccessibilityIdentifiers.Home.RiskTableViewCell.LoadingRiskTitle"
			static let failedRiskTitle = "AccessibilityIdentifiers.Home.RiskTableViewCell.FailedRiskTitle"
			static let inactiveRiskTitle = "AccessibilityIdentifiers.Home.RiskTableViewCell.InactiveRiskTitle"
			
			static let topContainer = "[AccessibilityIdentifiers.Home.RiskTableViewCell.topContainer]"
			static let bodyLabel = "HomeRiskTableViewCell.bodyLabel"
			static let updateButton = "HomeRiskTableViewCell.updateButton"
		}

		enum TestResultCell {
			static let pendingPCRButton = "AccessibilityIdentifiers.Home.pendingPCRButton"
...
			static let descriptionLabel = "AccessibilityIdentifiers.Home.descriptionLabel"
			static let footnoteLabel = "AccessibilityIdentifiers.Home.footnoteLabel"
		}

		enum ShownPositiveTestResultCell {
			enum PCR {
				static let pcrCell = "AccessibilityIdentifiers.Home.pcrCell"
				static let title = "AccessibilityIdentifiers.Home.pcrCell.Positive.Title"
				static let subtitle = "AccessibilityIdentifiers.Home.pcrCell.Positive.Subtitle"
				static let firstBulletPoint = "AccessibilityIdentifiers.Home.pcrCell.Positive.Item0"
				static let secondBulletPoint = "AccessibilityIdentifiers.Home.pcrCell.Positive.Item1"
				static let thirdBulletPoint = "AccessibilityIdentifiers.Home.pcrCell.Positive.Item2"
				static let fourthBulletPoint = "AccessibilityIdentifiers.Home.pcrCell.Positive.Item3"
...
				static let secondBulletPoint = "AccessibilityIdentifiers.Home.srsCell.Positive.Item1"
				static let thirdBulletPoint = "AccessibilityIdentifiers.Home.srsCell.Positive.Item2"
				static let fourthBulletPoint = "AccessibilityIdentifiers.Home.srsCell.Positive.Item3"
			}
			static let submittedPCRCell = "AccessibilityIdentifiers.Home.submittedPCRCell"
			static let submittedAntigenCell = "AccessibilityIdentifiers.Home.submittedAntigenCell"
			static let removeTestButton = "AppStrings.Home.TestResult.ShownPositive.removeTestButton"
			static let deleteAlertDeleteButton = "AppStrings.Home.TestResult.ShownPositive.deleteAlertDeleteButton"
		}

		enum MoreInfoCell {
			static let moreCell = "AppStrings.Home.moreCell"

...
			static let image = "AppStrings.Home.EndOfLifeThankYouCell.image"
		}

		enum TestRegistrationCell {
			static let titleLabel = "AppStrings.Home.TestRegistrationCell.titleLabel"
			static let descriptionLabel = "AppStrings.Home.TestRegistrationCell.descriptionLabel"
			static let submitCardButton = "AppStrings.Home.TestRegistrationCell.submitCardButton"
		}
		
		static let traceLocationsCardButton = "AppStrings.Home.traceLocationsCardButton"

		enum Alerts {
			static let anotherHighExposureButtonOK = "AppStrings.Home.riskStatusAnotherHighExposureButtonTitle"
...
